feat: Add real-time messaging with authentication

--- a/back-end/.env
+++ b/back-end/.env
@@ -5,4 +5,8 @@ JWT_SECRET=myscretkey
 
 NODE_ENV=development
 
+CLOUDINARY_CLOUD_NAME=dtrd9w2dp
+CLOUDINARY_API_KEY=842182759842981
+CLOUDINARY_API_SECRET=KFT5zhLxFb6W7zWdIT5uJAxQgzA
+
 #zbR70ZFd1HAzZdgA
