--- a/front-end/package.json
+++ b/front-end/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.71.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "socket.io-client": "^4.8.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.5"
